html_resources/style: fix annoying gaps in nested lists

--- a/html_resources/style.css
+++ b/html_resources/style.css
@@ -62,6 +62,7 @@ p, pre, ul, h2 {
 
 li ul {
   margin-left: 2em;
+  margin-bottom: 0;
   width: 100%;
 }
 
